// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxShow components default render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 4,
    }
  }
/>
`;

exports[`BoxShow components render all 1`] = `
<View
  style={
    Object {
      "backgroundColor": "green",
      "height": 10,
    }
  }
/>
`;

exports[`BoxShow components render backgroundColor 1`] = `
<View
  style={
    Object {
      "backgroundColor": "green",
      "height": 4,
    }
  }
/>
`;

exports[`BoxShow components render height 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 10,
    }
  }
/>
`;
